_config.yml: Add description of ourselves and title

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+title: Beating Forex
+description: We are Eugenio Cainelli and Peter Haraszti, two enthusiastic Master’s students — Eugenio is studying Applied Mathematics at the University of Trieste, while Peter is pursuing Data Science at TU Wien. We share a common passion for Artificial Intelligence and a drive to accomplish what others consider impossible.
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
