--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Beating Forex
-logo: /assets/forex_circle.png
+logo: /assets/forex_circle_small.png
 description: We are Eugenio Cainelli and Peter Haraszti, two enthusiastic Master’s students — Eugenio is studying Applied Mathematics at the University of Trieste, while Peter is pursuing Data Science at TU Wien. We share a common passion for Artificial Intelligence and a drive to accomplish what others consider impossible.
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
