--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Beating Forex
+title: About us
 logo: /assets/forex_circle_small.png
 description: We are Eugenio Cainelli and Peter Haraszti, two enthusiastic Master’s students — Eugenio is studying Applied Mathematics at the University of Trieste, while Peter is pursuing Data Science at TU Wien. We share a common passion for Artificial Intelligence and a drive to accomplish what others consider impossible.
 remote_theme: pages-themes/minimal@v0.2.0
