--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ description: We are Eugenio Cainelli and Peter Haraszti, two enthusiastic Master
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+github:
+  is_project_page: false
